# Miko

./: .gitmodules  CMakeLists.txt  README.md  cli.cpp
include/: core.h
include/cli/: ui.hpp
src/: cli.cpp  core.cpp
src/cli/: main.cpp  ui.cpp
src/mikolib/: core.cpp
